GNOME Bugzilla – Bug 340047
CSS baseline-shift directive
Last modified: 2016-01-06 01:46:49 UTC
Currently the CSS directive 'baseline-shift' is not understood or rendered. Please see http://www.w3.org/TR/SVG/text.html#BaselineAlignmentProperties for the expected behaviour and 'text-alignment-BE-10' from the W3C SVG test suite for an SVG test case and the rasterized example. Thanks.
*** Bug 585563 has been marked as a duplicate of this bug. ***
Created attachment 158406 [details] sample svg a sample file from bug #585563.
Created attachment 301888 [details] [review] patch_for_baseline_shift_sub_super Patch adding support of baseline shift attribute for tags "sub/super/baseline". Plus minor commenting source code.
I want to annotate to the patch above adds only support for tags "sub/super/baseline" but not the other options specified by SVG. The supported tags are the only important and fulfill the given example "sample.svg". Remark: I'm not an experienced gnomer.
mik: Thanks for the patch! Is this against git master? Bonus points for using "git format-patch" (includes author and commit summary) instead of plain "diff", see https://wiki.gnome.org/Git/Developers#Contributing_patches
Hi André! Thanks for your quick response. Until next friday I have no access to my (stationary) Linux system and all my notes are there. So far I guess I used git://git.gnome.org/librsvg to get sources for libRSVG but I haven't seen the latest changes listed on https://git.gnome.org/browse/librsvg/ with gitg despite librsvg 2.40.9. Maybe I got the update wrong from the download I've did the week before. I'm not familiar with git tools. I'll try my best next weekend to get your requests done.
Created attachment 302265 [details] [review] Add support for baseline shift. Patch adds support of baseline shift attribute for tags "sub/super/baseline". Plus minor commenting source code.
Created attachment 303420 [details] [review] This Patch adds support of baseline shift attribute for tags "sub/super/baseline" as requested in Gnome Bugzilla bug #340047. Previous patch violated coding style guideline.
Created attachment 318148 [details] [review] Add support of baseline shift attribute
Created attachment 318149 [details] [review] Update of patch that adds support for baseline shift attribute
The last patch also contains a binary png. Bugzilla doesn't show it during review.
This is really good! Thanks for fixing this! I've pushed this to master as commit e804fb1adcf564ce4bae661cc595a8d4df55efd3, with minor stylistic fixes. This will appear in version 2.40.13. I've filed bug #760191 to track the missing support for baseline-shift with a percentage of the font size or an explicit length.