bgo#340047 - Add support for the "baseline-shift" text attribute

This commit adds support for the baseline-shift attribute for tags
"sub/super/baseline".  We don't support percentages of the font size
or explicit lengths yet.

https://bugzilla.gnome.org/show_bug.cgi?id=340047